--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <!-- SEO＆OGP設定 -->
+    <meta name="description" content="架空の家具屋WOODEN STUDIO">
+    <meta name="robots" content="noindex">
+    <meta property="og:url" content=" https://tarosio.github.io/woodenstudio-tarosio/" />
+    <meta property="og:type" content=" website" />
+    <meta property="og:title" content=" WOODEN STUDIO" />
+    <meta property="og:description" content=" 架空の家具屋WOODEN STUDIOの公式サイト" />
+    <meta property="og:site_name" content="WOODEN STUDIO" />
+    <meta property="og:image" content=" https://tarosio.github.io/woodenstudio-tarosio/img/banner.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@tarosio514" />
     
     <!-- Reset.css -->
     <link rel="stylesheet" href="https://unpkg.com/destyle.css@4.0.1/destyle.min.css">
