--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
     gtag('js', new Date());
 
     gtag('config', 'G-GLC2EHQW6E');
+
+
 </script>
+
+    <!-- Microsoft Clarity -->
+<script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "s70hg1p2cs");
+</script>
+
+
 
     <!-- SEO＆OGP設定 -->
     <meta name="description" content="架空の家具屋WOODEN STUDIO">
